Resources/Adding StdDev and BoxPlots/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_max_ptr_5_altergo.txt
[kernel] Parsing max_ptr_5_rte.c (with preprocessing)
[kernel] max_ptr_5_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing max_ptr_5.c (with preprocessing)
  3     [rte:annot] annotating function max_ptr
[kernel] Frama-C aborted: invalid user input.
